--- a/java/com/android/incallui/res/values-zh-rCN/cm_strings.xml
+++ b/java/com/android/incallui/res/values-zh-rCN/cm_strings.xml
@@ -23,4 +23,7 @@
     <string name="recording_time_text">录音中</string>
     <string name="recording_warning_title">启用通话录音？</string>
     <string name="recording_warning_text">注意：您有责任遵守有关通话录音以及录音使用、分发相关的任何法律、法规和规定。</string>
+  <!-- Automatically call recording -->
+  <string name="auto_call_recording_title">自动录音</string>
+  <string name="auto_call_recording_summary">接通电话后自动录音</string>
 </resources>
