--- a/java/com/android/dialer/theme/base/res/values/theme_dialer_light.xml
+++ b/java/com/android/dialer/theme/base/res/values/theme_dialer_light.xml
@@ -71,6 +71,8 @@
     <item name="colorMobileOriginatingChatText">@color/google_blue_900</item>
     <item name="colorMobileOriginatingChatBackground">@color/google_blue_100</item>
     <item name="colorPrimary20pct">@color/dialer_theme_color_20pct</item>
+
+    <item name="android:windowBackground">@drawable/window_background</item>
   </style>
 
   <!-- TODO(a bug): investigate making this style's parent Dialer.ThemeBase.NoActionBar -->
@@ -87,11 +89,15 @@
      activity's theme extends from Dialer.ThemeBase.ActionBar or doesn't specify a theme. -->
   <style name="DialerActionBarBaseStyle"
       parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-    <item name="android:background">?android:attr/colorPrimary</item>
-    <item name="background">?android:attr/colorPrimary</item>
+    <item name="android:background">@drawable/actionbar_background</item>
+    <item name="background">@drawable/actionbar_background</item>
+    <item name="titleTextStyle">@style/ActionBarTitle</item>
+  </style>
+  <style name="ActionBarTitle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+    <item name="android:textColor">@color/actionbar_textColor</item>
   </style>
   <style name="DialerActionBarBaseTheme"
       parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-    <item name="colorControlNormal">@android:color/white</item>
+    <item name="colorControlNormal">@color/actionbar_textColor</item>
   </style>
 </resources>
