--- a/java/com/android/dialer/app/res/values-v27/styles.xml
+++ b/java/com/android/dialer/app/res/values-v27/styles.xml
@@ -17,7 +17,7 @@
 <resources>
   <style name="DialtactsTheme" parent="Dialer.ThemeBase.ActionBar">
     <item name="android:windowLightNavigationBar">true</item>
-    <item name="android:navigationBarColor">?android:attr/windowBackground</item>
+    <item name="android:navigationBarColor">@color/dialer_background_color</item>
     <item name="android:navigationBarDividerColor">#E0E0E0</item>
   </style>
 </resources>
