--- a/java/com/android/dialer/dialpadview/res/values/styles.xml
+++ b/java/com/android/dialer/dialpadview/res/values/styles.xml
@@ -74,6 +74,10 @@
     <item name="android:focusable">true</item>
   </style>
 
+  <style name="DialpadKeyButtonStyle.Themed">
+    <item name="android:background">@drawable/btn_dialpad_key_themed</item>
+  </style>
+
   <style name="DialpadKeyInternalLayoutStyle">
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">wrap_content</item>
