--- a/java/com/android/dialer/dialpadview/theme/res/values/attr.xml
+++ b/java/com/android/dialer/dialpadview/theme/res/values/attr.xml
@@ -32,7 +32,8 @@
     <attr format="color" name="dialpad_text_color"/>
     <attr format="color" name="dialpad_text_color_primary"/>
     <attr format="color" name="dialpad_text_color_secondary"/>
-    <attr format="color" name="dialpad_background"/>
+    <attr format="reference" name="dialpad_background"/>
     <attr format="dimension" name="dialpad_elevation"/>
+    <attr format="reference" name="dialpad_key_style"/>
   </declare-styleable>
 </resources>
