--- a/java/com/android/dialer/dialpadview/theme/res/values/styles.xml
+++ b/java/com/android/dialer/dialpadview/theme/res/values/styles.xml
@@ -36,6 +36,7 @@
     <item name="dialpad_text_color">?android:attr/textColorSecondary</item>
     <item name="dialpad_text_color_primary">?android:attr/colorPrimary</item>
     <item name="dialpad_text_color_secondary">?android:attr/textColorSecondary</item>
-    <item name="dialpad_background">?android:attr/colorBackgroundFloating</item>
+    <item name="dialpad_background">@drawable/dialpad_background</item>
+    <item name="dialpad_key_style">@style/DialpadKeyButtonStyle.Themed</item>
   </style>
 </resources>
