--- a/java/com/android/dialer/theme/hidden/res/values/colors_dialer_light.xml
+++ b/java/com/android/dialer/theme/hidden/res/values/colors_dialer_light.xml
@@ -21,4 +21,5 @@
   <color name="dialer_secondary_color">#F50057</color>
   <color name="dialer_background_color">#FAFAFA</color>
   <color name="dialer_ripple_color">#1f000000</color>
+  <color name="dialer_search_bar_color">@color/google_grey_50</color>
 </resources>
